--- a/datasets/proteingym.yaml
+++ b/datasets/proteingym.yaml
@@ -10,6 +10,7 @@ Tags:
   - protein
   - bioinformatics
   - biology
+  - life sciences
   - deep learning
   - machine learning
 License: MIT License
