--- a/datasets/tglc.yaml
+++ b/datasets/tglc.yaml
@@ -1,5 +1,5 @@
 
-Name: TESS-GAIA Light Curve (TESS)
+Name: TESS-GAIA Light Curve (TGLC)
 Description: |
   TESS-Gaia Light Curve (TGLC) is a PSF-based TESS full-frame image (FFI) light curve product. Using Gaia DR3 as priors, the team forward models the FFIs with the effective point spread function to remove contamination from nearby stars. The resulting light curves show a photometric precision closely tracking the pre-launch prediction of the noise level: TGLC's photometric precision consistently reaches ≲2% at 16th TESS magnitude even in crowded fields, demonstrating excellent decontamination and deblending power.
 Documentation: https://archive.stsci.edu/hlsp/tglc
@@ -13,12 +13,12 @@ Tags:
 License: All HLSPs hosted at MAST are subject to a [CC By 4.0 license](https://creativecommons.org/licenses/by/4.0/).
 Resources:
   - Description: TGLC Files
-    ARN: arn:aws:s3:::stpubdata/hlsp/tglc
+    ARN: arn:aws:s3:::stpubdata/mast/hlsp/tglc
     Region: us-east-1
     Type: S3 Bucket
     RequesterPays: False
   - Description: Notifications for new data
-    ARN: arn:aws:sns:us-east-1:879230861493:stpubdata/hlsp/tglc
+    ARN: arn:aws:sns:us-east-1:879230861493:stpubdata/mast/hlsp/tglc
     Region: us-east-1
     Type: SNS Topic
 DataAtWork:
