Update tags for surya-bench dataset.

--- a/datasets/surya-bench.yaml
+++ b/datasets/surya-bench.yaml
@@ -10,6 +10,8 @@ ManagedBy: NASA IMPACT
 UpdateFrequency: This is the final version of the Dataset.
 Tags:
   - machine learning
+  - solar
+  - aws-pds
 License: |
     Creative Commons Attribution 4.0 International.
 Citation: >
