Update and rename AI3.yaml to ai3.yaml

--- a/datasets/ai3.yaml
+++ b/datasets/ai3.yaml
@@ -32,9 +32,9 @@ Tags:
 License: https://devalab.in/AI3.html
 
 Resources:
-  - Description: Coordinates and the energetics of ~20,000 protein-ligand binding affinity datasets.
-    ARN: To be added once bucket is created
-    Region: To be added once bucket is created
+  - Description: Coordinates and the energetics of ~20,000 protein-ligand binding affinity datasets. AWS S3 AI3 Publicly Available Dataset Size: Version1: Total Size: 10.4 GiB (Initial structure of the protein-ligand complex and the average binding affinities along with average energy components). Version2: Total Size: 1.2 TiB (Five trajectories of protein-ligand complex (200 snapshots in all) and the closest two water molecules for each of the protein-ligand complex, and the time series of the binding affinities along with average energy components). Version3: Total Size: 10.7 TiB (Five trajectories of completely solvated protein-ligand complex (200 snapshots in all), and the time series of binding affinities along with average energy components.
+    ARN: arn:aws:account::345594599240:account
+    Region: us-east-1
     Type: S3 bucket
 
 DataAtWork:
