--- a/datasets/ai3.yaml
+++ b/datasets/ai3.yaml
@@ -21,13 +21,13 @@ ManagedBy: International Institute of Information Technology Hyderabad
 UpdateFrequency: Not updated
 
 Tags:
-  - Pharmaceutical
-  - Simulations
-  - Health
-  - Life Sciences
-  - Machine Learning
-  - Protein
-  - Molecular Dynamics
+  - pharmaceutical
+  - simulations
+  - health
+  - life sciences
+  - machine learning
+  - protein
+  - molecular dynamics
 
 License: https://devalab.in/AI3.html
 
