--- a/datasets/ai3.yaml
+++ b/datasets/ai3.yaml
@@ -35,7 +35,7 @@ Resources:
   - Description: Coordinates and the energetics of ~20,000 protein-ligand binding affinity datasets. AWS S3 AI3 Publicly Available Dataset Size is included in the following descriptions of Version 1, Version2 and Version 3. Version1 contains the total Size of 10.4 GiB (Initial structure of the protein-ligand complex and the average binding affinities along with average energy components). Version2 contains the total Size of 1.2 TiB (Five trajectories of protein-ligand complex (200 snapshots in all) and the closest two water molecules for each of the protein-ligand complex, and the time series of the binding affinities along with average energy components). Version3 contains the total Size of 10.7 TiB (Five trajectories of completely solvated protein-ligand complex (200 snapshots in all), and the time series of binding affinities along with average energy components).
     ARN: arn:aws:account::345594599240:account
     Region: us-east-1
-    Type: S3 bucket
+    Type: S3 Bucket
 
 DataAtWork:
   Tutorials:
