add more details about the catalog

--- a/datasets/gaia-dr3.yaml
+++ b/datasets/gaia-dr3.yaml
@@ -1,7 +1,7 @@
 
 Name: Gaia DR3 
 Description: |
-  [Gaia DR3 data](https://www.cosmos.esa.int/web/gaia/dr3) were originally released by the European Space Agency in December 2020. This [HATS](https://hats.readthedocs.io/en/stable)-formatted catalog was produced by the LSST Interdisciplinary Network for Collaboration and Computing. 
+  [Gaia DR3 data](https://www.cosmos.esa.int/web/gaia/dr3) were originally released by the European Space Agency in December 2020. This [HATS](https://hats.readthedocs.io/en/stable)-formatted catalog was produced by the LSST Interdisciplinary Network for Collaboration and Computing. The GAIA HATS Datasets are specifically designed for efficient spatial cross-matching with other HATS-format catalogs, whether within the same archive or across distributed archive data centers. This enables astronomers to perform complex analyses, such as identifying correlations or overlaps between datasets from different surveys. Users can leverage [LSDB (Large-Scale Database)](https://docs.lsdb.io/en/latest/), a scalable spatial analysis library, to execute precise, high-performance operations like cone searches or cross-matching. 
 Documentation: https://docs.lsdb.io/en/latest/index.html
 Contact: archive@stsci.edu
 ManagedBy: "[Space Telescope Science Institute](http://www.stsci.edu/)"
