Revert "fix search"

--- a/datasets/aws-public-blockchain.yaml
+++ b/datasets/aws-public-blockchain.yaml
@@ -3,19 +3,25 @@ Description: >
   <p>The AWS Public Blockchain Data initiative provides free access to blockchain datasets through collaboration with data providers. The data is optimized for analytics by being transformed into compressed Parquet files, partitioned by date for efficient querying.</p>
 
   <h4>Datasets</h4>
-  <b>Blockchain dataset - Maintained by - Path:</b><br>
-  - Bitcoin                 - AWS     - <code>s3://aws-public-blockchain/v1.0/btc/</code><br>
-  - Ethereum                - AWS     - <code>s3://aws-public-blockchain/v1.0/eth/</code><br>
-  - Arbitrum                - SonarX  - <code>s3://aws-public-blockchain/v1.1/sonarx/arbitrum/</code><br>
-  - Aptos                   - SonarX  - <code>s3://aws-public-blockchain/v1.1/sonarx/aptos/</code><br>
-  - Base                    - SonarX  - <code>s3://aws-public-blockchain/v1.1/sonarx/base/</code><br>
-  - Provenance              - SonarX  - <code>s3://aws-public-blockchain/v1.1/sonarx/provenance/</code><br>
-  - XRP Ledger              - SonarX  - <code>s3://aws-public-blockchain/v1.1/sonarx/xrp/</code><br>
-  - Stellar(<a href="https://developers.stellar.org/docs/learn/fundamentals/data-format/xdr" rel="noopener noreferrer">XDR files</a>)              - Stellar - <code>s3://aws-public-blockchain/v1.1/stellar/</code><br>
-  - The Open Network (TON)  - TON - <code>s3://aws-public-blockchain/v1.1/ton/</code><br>
+  <table width="100%">
+  <thead>
+    <tr><th>Blockchain dataset</th><th>Maintained by</th><th>Path</th></tr>
+  </thead>
+  <tbody>
+    <tr><td>Bitcoin</td>     <td>AWS</td>    <td><code>s3://aws-public-blockchain/v1.0/btc/</code></td></tr>
+    <tr><td>Ethereum</td>    <td>AWS</td>    <td><code>s3://aws-public-blockchain/v1.0/eth/</code></td></tr>
+    <tr><td>Arbitrum</td>    <td>SonarX</td> <td><code>s3://aws-public-blockchain/v1.1/sonarx/arbitrum/</code></td></tr>
+    <tr><td>Aptos</td>       <td>SonarX</td> <td><code>s3://aws-public-blockchain/v1.1/sonarx/aptos/</code></td></tr>
+    <tr><td>Base</td>        <td>SonarX</td> <td><code>s3://aws-public-blockchain/v1.1/sonarx/base/</code></td></tr>
+    <tr><td>Provenance</td>  <td>SonarX</td> <td><code>s3://aws-public-blockchain/v1.1/sonarx/provenance/</code></td></tr>
+    <tr><td>XRP Ledger</td>  <td>SonarX</td> <td><code>s3://aws-public-blockchain/v1.1/sonarx/xrp/</code></td></tr>
+    <tr><td>Stellar (<a href="https://developers.stellar.org/docs/learn/fundamentals/data-format/xdr" rel="noopener noreferrer">XDR files</a>)</td>  <td>Stellar</td> <td><code>s3://aws-public-blockchain/v1.1/stellar/</code></td></tr>
+    <tr><td>The Open Network (TON)</td>  <td>TON</td> <td><code>s3://aws-public-blockchain/v1.1/ton/</code></td></tr>
+  </tbody>
+  </table>
   </br>
 
-  <h4>Become a Data Provider</h4>
+  <h3>Become a Data Provider</h3>
   <p>We welcome additional blockchain data providers to join this initiative. If you're interested in contributing datasets to the AWS Public Blockchain Data program, please contact our team at <a href="mailto:aws-public-blockchain@amazon.com">aws-public-blockchain@amazon.com</a>.</p>
   
 
