Update used tags.

--- a/datasets/surya-bench.yaml
+++ b/datasets/surya-bench.yaml
@@ -12,6 +12,7 @@ Tags:
   - machine learning
   - solar
   - aws-pds
+  - heliophysics
 License: |
     Creative Commons Attribution 4.0 International.
 Citation: >
