update license to CC BY 4

--- a/datasets/yuukiiwa_application_placeholder.yaml
+++ b/datasets/yuukiiwa_application_placeholder.yaml
@@ -6,7 +6,7 @@ ManagedBy: "The Genome Institute of Singapore (https://www.a-star.edu.sg/gis) an
 UpdateFrequency: Datasets will be updated periodically as additional data are generated.
 Tags:
   - TBD
-License: "[CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/)"
+License: "[CC BY 4.0](https://creativecommons.org/licenses/by-nc/4.0/)"
 Citation: Update on August 31, 2025
 Resources: 
   - Description: Update on August 31, 2025
