--- a/tags.yaml
+++ b/tags.yaml
@@ -51,6 +51,7 @@
 - broadcast ephemeris
 - Caenorhabditis elegans
 - calcium imaging
+- canada
 - cancer
 - carbon
 - cell biology
@@ -110,6 +111,7 @@
 - deafrica
 - decennial census
 - deep learning
+- dem
 - demographic and housing characteristics file
 - demographics
 - demography
@@ -128,6 +130,8 @@
 - drilling
 - drifters
 - Drosophila melanogaster
+- dsm
+- dtm
 - earth observation
 - earthquakes
 - economics
