Updated description and tags

--- a/datasets/canelevation-dem.yml
+++ b/datasets/canelevation-dem.yml
@@ -1,5 +1,5 @@
 Name: CanElevation - Canada Digital Elevation Models
-Description: # TODO : Add description 
+Description: The Canadian DEM represents the current coverage of elevation data available. This dataset includes a Digital Terrain Model (DTM), a Digital Surface Model (DSM) and other derived products. This dataset includes a 1m, 2m and 30m DEM. The 1m and 2 m products are a combination of DEM data generated from airborne LiDAR and optical digital images. The 30 m DEM integrates data from the Copernicus DEM acquired during the TanDEM-X Mission, with the DEM data derived from airborne lidar and provides a complete coverage for Canada.  
 Documentation: [Medium Resolution Digital Elevation Model - MRDEM](https://open.canada.ca/data/en/dataset/18752265-bda3-498c-a4ba-9dfe68cb98da) [High Resolution Digital Elevation Model Mosaic](https://open.canada.ca/data/en/dataset/0fe65119-e96e-4a57-8bfe-9d9245fba06b) 
 Contact: geoinfo@nrcan-rncan.gc.ca
 ManagedBy: "[Natural Resources Canada](https://nrcan.gc.ca/)"
@@ -7,14 +7,14 @@ UpdateFrequency: "The dataset is updated as new DEM models becomes available.
 
 L'ensemble de données est mis à jour à mesure que des nouveaux modèles numérique d'élévation deviennent disponibles."
 Tags:
-  - canada #TODO : Needs to be submitted as new tag in the tag.yml
+  - canada
   - elevation
   - geospatial
   - stac
   - land
-  - dsm #TODO : Needs to be submitted as new tag in the tag.yml
-  - dtm #TODO : Needs to be submitted as new tag in the tag.yml
-  - dem #TODO : Needs to be submitted as new tag in the tag.yml
+  - dsm
+  - dtm
+  - dem
 License: "[Open Government License (OGL)](https://open.canada.ca/en/open-government-licence-canada)"
 Resources:
   - Description: Mosaic of High Resolution Digital Elevation Model (HRDEM) at 1m / Mosaïque de Modèle numérique d'élévation de haute résolution (MNEHR) à 1m
@@ -43,7 +43,7 @@ DataAtWork:
       URL: https://nrcan.github.io/cloud-optimized-geospatial/
       AuthorName: NRCan
   Publications:
-    - Title: # TODO : Add Heather's publication 
+    - Title:
       URL:
       AuthorName:
       AuthorURL:
