--- a/datasets/ai3.yaml
+++ b/datasets/ai3.yaml
@@ -20,7 +20,7 @@ License: https://devalab.in/AI3.html
 
 Resources:
   - Description: ai3data bucket includes coordinates and the energetics of ~20,000 protein-ligand binding affinity datasets. The subfolders of ai3data bucket consist of Version 1, Version2 and Version 3. Version1 contains the total Size of 10.4 GiB (Initial structure of the protein-ligand complex and the average binding affinities along with average energy components). Version2 contains the total Size of 1.2 TiB (Five trajectories of protein-ligand complex (200 snapshots in all) and the closest two water molecules for each of the protein-ligand complex, and the time series of the binding affinities along with average energy components). Version3 contains the total Size of 10.7 TiB (Five trajectories of completely solvated protein-ligand complex (200 snapshots in all), and the time series of binding affinities along with average energy components).
-    ARN: arn:aws:account::345594599240:account
+    ARN: arn:aws:s3:::ai3data
     Region: us-east-1
     Type: S3 Bucket
 
