--- a/datasets/ai3.yaml
+++ b/datasets/ai3.yaml
@@ -26,12 +26,10 @@ Resources:
 
 DataAtWork:
   Tutorials:
-    - Description: The dataset is easy to download and can be applied based on user requirements. Further information about the protocol for creation of the dataset can be obtained from https://github.com/devalab/AI3.
-  ToolsApplications:
-    - Title: Dataset of protein-ligand complexes now available in the Registry of Open Data on AWS
-      URL: To be added once blog is published
-      AuthorName: U. Deva Priyakumar, Rakesh Srivastava, Prathit Chatterjee, Vladimir Aladinskiy, Ramanathan Sethuraman, Yusong Wang, Alex Iankoulski, Beryl Rabindran
-      AuthorURL: https://devalab.in/
+    - Title: "AI3: Protein-Ligand Binding Affinity Dataset"
+      URL: https://github.com/devalab/AI3
+      AuthorName: Deva Priyakumar Lab
+      AuthorURL: https://github.com/devalab  
   Publications:
     - Title: "PLAS-5k: Dataset of Protein-Ligand Affinities from Molecular Dynamics for Machine Learning Applications"
       URL: https://www.nature.com/articles/s41597-022-01631-9
