--- a/tags.yaml
+++ b/tags.yaml
@@ -197,11 +197,10 @@
 - green aviation
 - ground water
 - group quarters
-- h5
 - hazard
 - hazard indicator
 - Hawkes Process
-- hdf5
+- hdf
 - health
 - high-throughput imaging
 - hiring
@@ -416,6 +415,7 @@
 - temporal point process
 - tertiary analysis
 - text analysis
+- tiff
 - tiles
 - time series forecasting
 - trading
