--- a/datasets/noaa-historicalcharts.yaml
+++ b/datasets/noaa-historicalcharts.yaml
@@ -2,7 +2,7 @@ Name: NOAA Historical Maps and Charts
 Description: Historical Charts are not for Navigation. The collection primarily consists of historic charts and maps produced by NOAA's Coast Survey and its predecessors, especially the U.S. Coast and Geodetic Survey and the U.S. Lake Survey (previously under the Department of War). The collection also includes bathymetric maps, land sketches, Civil War battle maps, aeronautical charting from the 1930s to the 1950s, and other drawings and photographs.
 Documentation: https://historicalcharts.noaa.gov/about.php
 Contact: |
-  For any questions regarding data delivery not associated with this platform or any general questions regarding the NOAA Big Data Program, email noaa.bdp@noaa.gov.<br/><br/>
+  For any general questions regarding the NOAA Open Data Dissemination (NODD) Program, email the NODD Team at nodd@noaa.gov. We also seek to identify case studies on how NOAA data is being used and will be featuring those stories in joint publications and in upcoming events. If you are interested in seeing your story highlighted, please share it with the NODD team by emailing nodd@noaa.gov.<br/><br/>
   For general questions or feedback about the data, please submit inquiries through the NOAA Office of Coast Survey (OCS) ASSIST Tool at https://www.nauticalcharts.noaa.gov/customer-service/assist/.
 ManagedBy: "[NOAA](http://www.noaa.gov/)"
 UpdateFrequency: Periodic manual updates when historic charts are added to the collection.
