--- a/tags.yaml
+++ b/tags.yaml
@@ -197,9 +197,11 @@
 - green aviation
 - ground water
 - group quarters
+- h5
 - hazard
 - hazard indicator
 - Hawkes Process
+- hdf5
 - hdf
 - health
 - heliophysics
