--- a/datasets/indian-supreme-court-judgments.yaml
+++ b/datasets/indian-supreme-court-judgments.yaml
@@ -6,8 +6,7 @@ ManagedBy: "[Dattam Labs](https://dattam.in)"
 UpdateFrequency: Bi-monthly
 Tags:
   - legal data
-  - supreme court
-  - india
+  - aws-pds
 License: CC-BY-4.0
 Resources:
   - Description: S3 bucket containing the judgments
