--- a/datasets/fvcom_gom3.yaml
+++ b/datasets/fvcom_gom3.yaml
@@ -1,24 +1,24 @@
-Name: FVCOM GOM3
-Description: The Finite Volume Community Ocean Model (FVCOM) was used to simulate ocean water levels, velocity, temperature and salinity over a multi-decadal period (1984-present) in the waters of the Northeast US including the Gulf of Maine.  The model was configured and run by the Dr. Changshen Chen, Director of the Marine Ecosystems Dynamics Modeling Laboratory in the School for Marine Science & Technology at the University of Massachusetts Dartmouth.  The triangular mesh has a varying horizontal resolution from several hundred meters inshore to several kilometers offshore.  The model output was saved at hourly from 2009-08-21 to 2022-06-17. 
-Documentation: https://www.umassd.edu/news/2018/charting-the-ocean-.html
+Name: UMASSD-FVCOM-GOM3-Hindcast
+Description: The Finite Volume Community Ocean Model (FVCOM) was used to simulate ocean water levels, velocity, temperature and salinity over a multi-decadal period (1984-present) in the waters of the Northeast US including the Gulf of Maine.  The model was configured and run by the Dr. Changshen Chen, Director of the Marine Ecosystems Dynamics Modeling Laboratory in the School for Marine Science & Technology at the University of Massachusetts Dartmouth.  The triangular mesh has a varying horizontal resolution from several hundred meters inshore to several kilometers offshore, and 45 terrain-following vertical layers.  The model output was saved at hourly intervals from 2009-08-21 to 2022-06-17. 
+Documentation: https://en.wikipedia.org/wiki/Finite_Volume_Community_Ocean_Model
 Contact: rich@opensciencecomputing.com
 ManagedBy: Open Science Computing, LLC
 UpdateFrequency: None
-Citation: 
+Citation: https://web.archive.org/web/20161229211546id_/http://fvcom.smast.umassd.edu/wp-content/uploads/2013/11/MITSG_12-25.pdf
 Tags:
   - aws-pds
   - oceans
 License: CC0
 Resources:
-  - Description: A collection of NetCDF files, kerchunk generated JSON files, and an Intake catalog
+  - Description: A collection of NetCDF files, kerchunk-generated Parquet reference files, and an Intake catalog
     ARN: arn:aws:s3:::fvcom-gom3
-    Region: us-west-2
+    Region: us-east-1
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
     - Title: FVCOM Explorer Notebook
       URL: https://github.com/opensciencecomputing/fvcom
-      NotebookURL: https://github.com/opensciencecomputing/fvcom/blob/main/FVCOM_explore.ipynb
+      NotebookURL: https://github.com/opensciencecomputing/umassd-fvcom/blob/main/fvcom_gom3_explore.ipynb
       AuthorName: Rich Signell
       AuthorURL: https://about.me/rich.signell
       Services:
