--- a/datasets/canelevation-dem.yaml
+++ b/datasets/canelevation-dem.yaml
@@ -12,6 +12,7 @@ UpdateFrequency: |
   <br/>
   L'ensemble de données est mis à jour à mesure que des nouveaux modèles numérique d'élévation deviennent disponibles.
 Tags:
+  - aws-pds
   - canada
   - elevation
   - geospatial
@@ -80,5 +81,6 @@ DataAtWork:
       URL:
       AuthorName:
       AuthorURL:
+
 
 
