--- a/datasets/canelevation-dem.yaml
+++ b/datasets/canelevation-dem.yaml
@@ -1,4 +1,4 @@
-Name: CanElevation - Canada Digital Elevation Models
+Name: "CanElevation - Canada Digital Elevation Models"
 Description: |
   The Canadian DEM represents the current coverage of elevation data available. This dataset includes a Digital Terrain Model (DTM), a Digital Surface Model (DSM) and other derived products. This dataset includes a 1m, 2m and 30m DEM. The 1m and 2 m products are a combination of DEM data generated from airborne LiDAR and optical digital images. The 30 m DEM integrates data from the Copernicus DEM acquired during the TanDEM-X Mission, with the DEM data derived from airborne lidar and provides a complete coverage for Canada. 
   <br/>
@@ -81,6 +81,7 @@ DataAtWork:
       URL:
       AuthorName:
       AuthorURL:
+
 
 
 
