adding SNS topic resource

--- a/datasets/iceye-opendata.yaml
+++ b/datasets/iceye-opendata.yaml
@@ -32,6 +32,10 @@ Resources:
     Explore:
     - '[Browse bucket](http://iceye-open-data-catalog.s3-website-us-west-2.amazonaws.com)'
     - '[STAC Browser](https://radiantearth.github.io/stac-browser/#/external/iceye-open-data-catalog.s3-us-west-2.amazonaws.com/catalog.json)'
+  - Description: Notification for new ICEYE Open SAR Data
+    ARN: arn:aws:sns:us-west-2:058264311954:iceye-open-data-catalog-object_created
+    Region: us-west-2
+    Type: SNS topic
 DataAtWork:
   Tutorials:
     - Title: ICEYE Product Documentation
