--- a/datasets/iceye-opendata.yaml
+++ b/datasets/iceye-opendata.yaml
@@ -35,7 +35,7 @@ Resources:
   - Description: Notification for new ICEYE Open SAR Data
     ARN: arn:aws:sns:us-west-2:058264311954:iceye-open-data-catalog-object_created
     Region: us-west-2
-    Type: SNS topic
+    Type: SNS Topic
 DataAtWork:
   Tutorials:
     - Title: ICEYE Product Documentation
