ADD: Add MRMS Cookbook from Pythia

--- a/datasets/noaa-mrms-pds.yaml
+++ b/datasets/noaa-mrms-pds.yaml
@@ -48,6 +48,10 @@ Resources:
     Region: us-east-1
     Type: SNS Topic
 DataAtWork:
+  Tools & Applications:
+    - Title: Collection of Jupyter Notebooks using Python for working with MRMS Data
+      URL: https://projectpythia.org/mrms-cookbook/
+      AuthorName: Project Pythia Community
   Publications:
     - Title: "Multi-Radar Multi-Sensor (MRMS) Quantitative Precipitation Estimation: Initial Operating Capabilities"
       URL: https://journals.ametsoc.org/view/journals/bams/97/4/bams-d-14-00174.1.xml
