--- a/datasets/nasa-operal3dswx-s1v1.yaml
+++ b/datasets/nasa-operal3dswx-s1v1.yaml
@@ -12,7 +12,7 @@ Description: "This dataset contains Level-3 Dynamic OPERA Surface Water Extent f
   OPERA DSWx-S1 product contains modified Copernicus Sentinel data (2024-2025).\n<br><br>\nTo
   access the calibration/validation database for OPERA Dynamic Surface Water Extent
   Products, please contact podaac@podaac.jpl.nasa.gov \nRead our doc on how to get
-  AWS Credentials to retrieve this data: https://archive.podaac.earthdata.nasa.gov/s3credentialsREADME
+  AWS Credentials to retrieve this data: https://archive.podaac.earthdata.nasa.gov/s3credentialsREADME"
 Documentation: https://doi.org/10.5067/OPDSWS1-L3V1
 Contact: 'Help Desk: podaac@podaac.jpl.nasa.gov. Home Page: https://podaac.jpl.nasa.gov/'
 ManagedBy: NASA
