--- a/datasets/cmas-data-warehouse.yaml
+++ b/datasets/cmas-data-warehouse.yaml
@@ -60,8 +60,8 @@ Resources:
     Type: S3 Bucket
     Explore: 
     - '[Browse Bucket](https://cmas-equates.s3.amazonaws.com/index.html)'
-  - Description: CMAQ 2022 Modeling Platform
-    ARN: arn:aws:s3:::2022platform
+  - Description: EPA 2022 Modeling Platform
+    ARN: arn:aws:s3:::epa-2022-modeling-platform
     Region: us-east-1
     Type: S3 Bucket
     Explore:
