--- a/datasets/nasa-m2i3nvaer.yaml
+++ b/datasets/nasa-m2i3nvaer.yaml
@@ -44,7 +44,7 @@ Tags:
   - ice
   - land
   - metadata
-  - netCDF
+  - netcdf
   - opendap
   - water
 License: '[Creative Commons BY 4.0](https://creativecommons.org/licenses/by/4.0/)'
@@ -87,14 +87,17 @@ DataAtWork:
       AuthorName: Reichle, R. H., C. S. Draper, Q. Liu, M. Girotto, S. P. P. Mahanama,
         R. D. Koster, and G. J. M. De Lannoy
     - Title: '2015b: MERRA-2: Initial Evaluation of the Climate'
+      URL: ~
       AuthorName: Bosilovich, M. G., S. Akella, L. Coy, R. Cullather, C. Draper, R.
         Gelaro, R. Kovach, Q.Liu, A. Molod, P. Norris, K. Wargan, W. Chao, R. Reichle,
         L. Takacs, Y. Vikhliaev, S. Bloom, A. Collow, S. Firth, G. Labow, G. Partyka,
         S. Pawson, O. Reale, S. D. Schubert, and M. Suarez
     - Title: Data assimilation using incremental analysis updates
+      URL: https://doi.org/10.1175/1520-0493(1996)124<1256:DAUIAU>2.0.CO;2
       AuthorName: Bloom, S., L. Takacs, A. DaSilva, and D. Ledvina
     - Title: Documentation and Validation of the Goddard Earth Observing System (GEOS)
         Data Assimilation System - Version 4
+      URL: https://ntrs.nasa.gov/citations/20050175690
       AuthorName: Bloom, S., A. da Silva, D. Dee, M. Bosilovich, J.-D. Chern, S. Pawson,
         S. Schubert, M. Sienkiewicz, I. Stajner, W.-W. Tan, M.-L. Wu
     - Title: Design and implementation of components in the Earth System Modeling
@@ -104,16 +107,20 @@ DataAtWork:
         Balaji, P. Li, W. Yang, C. Hill, and A. da Silva
     - Title: A catchment-based approach to modeling land surface processes in a GCM,
         Part 1, Model Structure
+      URL: ~
       AuthorName: Koster, R. D., M. J. Suarez, A. Ducharne, M. Stieglitz, and P. Kumar
     - Title: 'Numerical aspects of the application of recursive filters to variational
         statistical analysis. Part I: Spatially homogeneous and isotropic Gaussian
         covariances'
+      URL: https://doi.org/10.1175//1520-0493(2003)131<1524:NAOTAO>2.0.CO;2
       AuthorName: Purser, R. J., W.-S. Wu, D. F. Parrish, and N. M. Roberts
     - Title: 'Numerical aspects of the application of recursive filters to variational
         statistical analysis. Part II: Spatially inhomogeneous and anisotropic general
         covariances'
+      URL: https://doi.org/10.1175//2543.1
       AuthorName: Purser, R. J., W.-S. Wu, D. F. Parrish, and N. M. Roberts
     - Title: Three-dimensional variational analysis with spatially inhomogeneous covariances
+      URL: https://doi.org/10.1175/1520-0493(2002)130<2905:TDVAWS>2.0.CO;2
       AuthorName: Wu, W.-S., R.J. Purser and D.F. Parrish
   Tutorials:
     - Title: How to Access GES DISC Data Using Python
