--- a/datasets/nasa-sentinel-1aslc.yaml
+++ b/datasets/nasa-sentinel-1aslc.yaml
@@ -29,7 +29,7 @@ Tags:
 License: '[Creative Commons BY 4.0](https://creativecommons.org/licenses/by/4.0/)'
 Resources:
   - Description: 'SENTINEL-1A_SLC.'
-    ARN: arn:aws:s3::asf-ngap2w-p-s1-slc-7b420b89
+    ARN: arn:aws:s3:::asf-ngap2w-p-s1-slc-7b420b89
     Region: us-west-2
     Type: S3 Bucket
     RequesterPays: false
