--- a/datasets/nasa-gpm3imergdl.yaml
+++ b/datasets/nasa-gpm3imergdl.yaml
@@ -93,16 +93,14 @@ DataAtWork:
   Publications:
     - Title: Precipitation Estimation from Remotely Sensed Imagery Using an Artificial
         Neural Network Cloud Classification System
+      URL: https://doi.org/10.1175/JAM2173.1
       AuthorName: Hong, Y., K. L. Hsu, S. Sorooshian, and X. Gao
-    - Title: 'The TRMM Multi-satellite Precipitation Analysis: Quasi-Global, Multi-Year,
-        Combined-Sensor Precipitation Estimates at Fine Scale.'
-      AuthorName: Huffman, G. J., R. F. Adler, D. T. Bolvin, G. Gu, E. J. Nelkin,
-        K. P. Bowman, Y. Hong, E. F. Stocker, and D. B. Wolff
     - Title: Kalman Filter Based CMORPH
       URL: https://doi.org/10.1175/JHM-D-11-022.1
       AuthorName: Joyce, R. J., P. Xie, and J. E. Janowiak
     - Title: Calculation of Gridded Precipitation Data for the Global Land-Surface
         Using In-Situ Gauge Observations
+      URL: https://www.researchgate.net/profile/Udo-Schneider-4/publication/253114707_Calculation_of_Gridded_Precipitation_Data_for_the_Global_Land-Surface_using_in-situ_Gauge_Observations/links/0deec53bbcb3a0e220000000/Calculation-of-Gridded-Precipitation-Data-for-the-Global-Land-Surface-using-in-situ-Gauge-Observations.pdf
       AuthorName: Rudolf, B., and U. Schneider
   Tutorials: 
    - Title: How to Access GES DISC Data Using Python
