--- a/datasets/nasa-m2t1nxslv.yaml
+++ b/datasets/nasa-m2t1nxslv.yaml
@@ -1,5 +1,4 @@
-Name: 'MERRA-2 tavg1_2d_slv_Nx: 2d,1-Hourly,Time-Averaged,Single-Level,Assimilation,Single-Level
-  Diagnostics 0.625 x 0.5 degree V5.12.4 (M2T1NXSLV) at GES DISC'
+Name: 'MERRA-2 tavg1_2d_slv_Nx: 2d,1-Hourly,Time-Averaged,Single-Level,Assimilation,Single-Level Diagnostics 0.625 x 0.5 degree'
 Description: "M2T1NXSLV (or  tavg1_2d_slv_Nx) is an hourly time-averaged 2-dimensional
   data collection in Modern-Era Retrospective analysis for Research and Applications
   version 2 (MERRA-2).  This collection consists of meteorology diagnostics at popularly
