add urls and author name
Co-authored-by: EthanGrants <105686621+EthanGrants@users.noreply.github.com>

--- a/datasets/nasa-m2i3nvaer.yaml
+++ b/datasets/nasa-m2i3nvaer.yaml
@@ -87,7 +87,7 @@ DataAtWork:
       AuthorName: Reichle, R. H., C. S. Draper, Q. Liu, M. Girotto, S. P. P. Mahanama,
         R. D. Koster, and G. J. M. De Lannoy
     - Title: '2015b: MERRA-2: Initial Evaluation of the Climate'
-      URL: ~
+      URL: https://ntrs.nasa.gov/api/citations/20160005045/downloads/20160005045.pdf
       AuthorName: Bosilovich, M. G., S. Akella, L. Coy, R. Cullather, C. Draper, R.
         Gelaro, R. Kovach, Q.Liu, A. Molod, P. Norris, K. Wargan, W. Chao, R. Reichle,
         L. Takacs, Y. Vikhliaev, S. Bloom, A. Collow, S. Firth, G. Labow, G. Partyka,
@@ -107,7 +107,7 @@ DataAtWork:
         Balaji, P. Li, W. Yang, C. Hill, and A. da Silva
     - Title: A catchment-based approach to modeling land surface processes in a GCM,
         Part 1, Model Structure
-      URL: ~
+      URL: https://doi.org/10.1029/2000JD900327
       AuthorName: Koster, R. D., M. J. Suarez, A. Ducharne, M. Stieglitz, and P. Kumar
     - Title: 'Numerical aspects of the application of recursive filters to variational
         statistical analysis. Part I: Spatially homogeneous and isotropic Gaussian
