Fix: AODN - replace nbviewer with github in notebook url

--- a/datasets/aodn_radar_rottnestshelf_wind_delayed_qc.yaml
+++ b/datasets/aodn_radar_rottnestshelf_wind_delayed_qc.yaml
@@ -40,12 +40,12 @@ DataAtWork:
   Tutorials:
   - Title: Accessing IMOS - ACORN - Rottnest Shelf HF ocean radar site (Western Australia,
       Australia) - Delayed mode wind
-    URL: https://nbviewer.org/github/aodn/aodn_cloud_optimised/blob/main/notebooks/radar_RottnestShelf_wind_delayed_qc.ipynb
+    URL: https://github.com/aodn/aodn_cloud_optimised/blob/main/notebooks/radar_RottnestShelf_wind_delayed_qc.ipynb
     NotebookURL: https://githubtocolab.com/aodn/aodn_cloud_optimised/blob/main/notebooks/radar_RottnestShelf_wind_delayed_qc.ipynb
     AuthorName: Laurent Besnard
     AuthorURL: https://github.com/aodn/aodn_cloud_optimised
   - Title: Accessing and search for any AODN dataset
-    URL: https://nbviewer.org/github/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
+    URL: https://github.com/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
     NotebookURL: https://githubtocolab.com/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
     AuthorName: Laurent Besnard
     AuthorURL: https://github.com/aodn/aodn_cloud_optimised
