--- a/datasets/aodn_satellite_ghrsst_l3s_1month_daytime_single_sensor_australia.yaml
+++ b/datasets/aodn_satellite_ghrsst_l3s_1month_daytime_single_sensor_australia.yaml
@@ -34,12 +34,12 @@ DataAtWork:
   Tutorials:
   - Title: Accessing IMOS - SRS - SST - L3S - Single Sensor - 1 month - day time -
       Australia
-    URL: https://nbviewer.org/github/aodn/aodn_cloud_optimised/blob/main/notebooks/satellite_ghrsst_l3s_1month_daytime_single_sensor_australia.ipynb
+    URL: https://github.com/aodn/aodn_cloud_optimised/blob/main/notebooks/satellite_ghrsst_l3s_1month_daytime_single_sensor_australia.ipynb
     NotebookURL: https://githubtocolab.com/aodn/aodn_cloud_optimised/blob/main/notebooks/satellite_ghrsst_l3s_1month_daytime_single_sensor_australia.ipynb
     AuthorName: Laurent Besnard
     AuthorURL: https://github.com/aodn/aodn_cloud_optimised
   - Title: Accessing and search for any AODN dataset
-    URL: https://nbviewer.org/github/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
+    URL: https://github.com/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
     NotebookURL: https://githubtocolab.com/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
     AuthorName: Laurent Besnard
     AuthorURL: https://github.com/aodn/aodn_cloud_optimised
