--- a/datasets/aodn_satellite_ghrsst_l4_gamssa_1day_multi_sensor_world.yaml
+++ b/datasets/aodn_satellite_ghrsst_l4_gamssa_1day_multi_sensor_world.yaml
@@ -32,12 +32,12 @@ Resources:
 DataAtWork:
   Tutorials:
   - Title: Accessing IMOS - SRS - SST - L4 - GAMSSA - World
-    URL: https://nbviewer.org/github/aodn/aodn_cloud_optimised/blob/main/notebooks/satellite_ghrsst_l4_gamssa_1day_multi_sensor_world.ipynb
+    URL: https://github.com/aodn/aodn_cloud_optimised/blob/main/notebooks/satellite_ghrsst_l4_gamssa_1day_multi_sensor_world.ipynb
     NotebookURL: https://githubtocolab.com/aodn/aodn_cloud_optimised/blob/main/notebooks/satellite_ghrsst_l4_gamssa_1day_multi_sensor_world.ipynb
     AuthorName: Laurent Besnard
     AuthorURL: https://github.com/aodn/aodn_cloud_optimised
   - Title: Accessing and search for any AODN dataset
-    URL: https://nbviewer.org/github/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
+    URL: https://github.com/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
     NotebookURL: https://githubtocolab.com/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
     AuthorName: Laurent Besnard
     AuthorURL: https://github.com/aodn/aodn_cloud_optimised
