--- a/datasets/aodn_satellite_net_primary_productivity_oc3_1day_aqua.yaml
+++ b/datasets/aodn_satellite_net_primary_productivity_oc3_1day_aqua.yaml
@@ -51,12 +51,12 @@ DataAtWork:
   Tutorials:
   - Title: Accessing IMOS - SRS - MODIS - 01 day - Net Primary Productivity (OC3 model
       and Eppley-VGPM algorithm)
-    URL: https://nbviewer.org/github/aodn/aodn_cloud_optimised/blob/main/notebooks/satellite_net_primary_productivity_oc3_1day_aqua.ipynb
+    URL: https://github.com/aodn/aodn_cloud_optimised/blob/main/notebooks/satellite_net_primary_productivity_oc3_1day_aqua.ipynb
     NotebookURL: https://githubtocolab.com/aodn/aodn_cloud_optimised/blob/main/notebooks/satellite_net_primary_productivity_oc3_1day_aqua.ipynb
     AuthorName: Laurent Besnard
     AuthorURL: https://github.com/aodn/aodn_cloud_optimised
   - Title: Accessing and search for any AODN dataset
-    URL: https://nbviewer.org/github/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
+    URL: https://github.com/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
     NotebookURL: https://githubtocolab.com/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
     AuthorName: Laurent Besnard
     AuthorURL: https://github.com/aodn/aodn_cloud_optimised
