--- a/datasets/aodn_vessel_air_sea_flux_sst_meteo_realtime.yaml
+++ b/datasets/aodn_vessel_air_sea_flux_sst_meteo_realtime.yaml
@@ -43,12 +43,12 @@ DataAtWork:
   Tutorials:
   - Title: Accessing IMOS - SOOP-Air Sea Flux (ASF) sub-facility - Meteorological
       and SST Observations
-    URL: https://nbviewer.org/github/aodn/aodn_cloud_optimised/blob/main/notebooks/vessel_air_sea_flux_sst_meteo_realtime.ipynb
+    URL: https://github.com/aodn/aodn_cloud_optimised/blob/main/notebooks/vessel_air_sea_flux_sst_meteo_realtime.ipynb
     NotebookURL: https://githubtocolab.com/aodn/aodn_cloud_optimised/blob/main/notebooks/vessel_air_sea_flux_sst_meteo_realtime.ipynb
     AuthorName: Laurent Besnard
     AuthorURL: https://github.com/aodn/aodn_cloud_optimised
   - Title: Accessing and search for any AODN dataset
-    URL: https://nbviewer.org/github/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
+    URL: https://github.com/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
     NotebookURL: https://githubtocolab.com/aodn/aodn_cloud_optimised/blob/main/notebooks/GetAodnData.ipynb
     AuthorName: Laurent Besnard
     AuthorURL: https://github.com/aodn/aodn_cloud_optimised
