--- a/datasets/aodn_animal_acoustic_tracking_delayed_qc.yaml
+++ b/datasets/aodn_animal_acoustic_tracking_delayed_qc.yaml
@@ -28,9 +28,10 @@ Collabs:
     Tags:
       - biodiversity
 Tags:
-- oceans
-- marine mammals
-- biology
+  - aws-psd
+  - oceans
+  - marine mammals
+  - biology
 License: http://creativecommons.org/licenses/by/4.0/
 Resources:
 - Description: Cloud Optimised AODN dataset of IMOS - Animal Tracking Facility - Acoustic
