--- a/datasets/marine-energy-data.yaml
+++ b/datasets/marine-energy-data.yaml
@@ -38,6 +38,12 @@ Resources:
     Type: S3 Bucket
     Explore:
     - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=marine-energy-data&prefix=pacwave%2F)'
+  - Description: "[Unobtrusive Multi-static Serial LiDAR Imager (UMSLI) Dataset](https://mhkdr.openei.org/submissions/507)"
+    ARN: arn:aws:s3:::marine-energy-data/umsli/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=marine-energy-data&prefix=umsli%2F)'
 DataAtWork:
   Tools & Applications:
   Publications:
